--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,45 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+h1 {
+  @apply text-blue-900 mb-2 text-xl;
+}
+
+h2 {
+  @apply text-blue-900 mb-2 text-lg;
+}
+
+input,
+textarea {
+  @apply border border-gray-300 rounded-md px-1 w-full mb-2;
+}
+
+input:focus,
+textarea:focus {
+  @apply border-blue-900;
+}
+
+label {
+  @apply text-blue-900;
+}
+
+.btn-primary {
+  @apply bg-blue-900 text-white px-4 py-1 rounded-md;
+}
+
+table.basic {
+  @apply w-full;
+}
+
+table.basic thead tr td {
+  @apply bg-blue-100;
+}
+
+table.basic tr td {
+  @apply border border-blue-200 p-1;
+}
+
+.btn-secondary {
+  @apply bg-blue-900 text-white text-sm p-1 rounded-md px-2 inline-flex gap-1 mr-1;
+}
